--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="event-card amber accent-3 col s6">
-                    <a href="/ocorrencias">
+                    <a href="/ocorrencias/bairros">
                     <div class="container card-body">
                         <div class="row">
                             <div class="col s2 card-icon">
