--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,7 +5,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:jsf="http://xmlns.jcp.org/jsf"
                 xmlns:p="http://primefaces.org/ui"
-                >
+>
 
     <ui:define name="content">
         <header id="home-page-header">
@@ -39,78 +39,31 @@
                             </div>
                             <div class="col s2 card-action">
                                 <div class="box center-align">
-                                    <span>59</span>
+                                    <span>#{occurrenceBean.occurrenceService.findAll().size()}</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
             <div class="row">
-                <div class="event-card light-green lighten-2 col s6">
-                    <div class="container card-body">
-                        <div class="row">
-                            <div class="col s2 card-icon">
-                                <i class="fa fa-envelope-open" aria-hidden="true" />
-                            </div>
-                            <div class="col s10 card-text center-align">
-                                <p>Buracos</p>
-                                <p>12 OCORRÊNCIAA</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="event-card orange lighten-4 col s6">
-                    <div class="container card-body">
-                        <div class="row">
-                            <div class="col s2 card-icon">
-                                <i class="fa fa-trash" aria-hidden="true" />
-                            </div>
-                            <div class="col s8 card-text center-align">
-                                <p>LIXO</p>
-                            </div>
-                            <div class="col s2 card-action">
-                                <div class="box center-align">
-                                    <span>14</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <ui:repeat value="#{occurrenceBean.findAll()}" var="occurrence">
-            <div class="row">
-                <div class="event-card green darken-1 col s6">
-                    <div class="container card-body">
-                        <div class="row">
-                            <div class="col s2 card-icon">
-                                <i class="fa fa-th-large" aria-hidden="true" />
-                            </div>
-                            <div class="col s10 card-text center-align">
-                                <p>#{occurrence.description}</p>
-                                <p>teste</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </ui:repeat>
-                <div class="event-card amber accent-3 col s6">
-                    <a href="/ocorrencias/bairros">
+                <ui:repeat value="#{categoryBean.findAll()}" var="category">
+                    <div class="event-card green darken-1 col s5 offset-s1 padding">
                         <div class="container card-body">
                             <div class="row">
-                                <div class="col s2 card-icon">
-                                    <i class="fa fa-th-large" aria-hidden="true" />
+                                <div class="col s6 card-text center">
+                                    <p>#{category.name}</p>
                                 </div>
-                                <div class="col s10 card-text center-align">
-                                    <p>SINALIZAÇÃO</p>
-                                    <p>12 OCORRÊNCIA</p>
+                                <div class="col offset-s4 s2 card-action">
+                                    <div class="box center-align">
+                                        <span>0</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </a>
-                </div>
+                    </div>
+                </ui:repeat>
+            </div>
         </article>
     </ui:define>
 </ui:composition>
