persist occurence and show admin/ocurrences

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -20,6 +20,8 @@
                 <p>Entre e nos conte o problema que você identificou</p>
             </div>
         </header>
+        
+        <p:messages></p:messages>
 
         <article id="index-content" class="container">
             <header class="center-align">
