--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -30,18 +30,20 @@
             </header>
 
             <div class="row">
-                <div class="event-card grey lighten-1 col s12">
-                    <div class="container card-body">
-                        <div class="row">
-                            <div class="col s2 card-icon">
-                                <i class="fa fa-th-large" aria-hidden="true" />
-                            </div>
-                            <div class="col s8 card-text center-align">
-                                <p>TODAS OCORRÊNCIAS</p>
-                            </div>
-                            <div class="col s2 card-action">
-                                <div class="box center-align">
-                                    <span>#{occurrenceBean.occurrenceService.findAll().size()}</span>
+                <div class="col s12">
+                    <div class="event-card grey lighten-1">
+                        <div class="container card-body">
+                            <div class="row">
+                                <div class="col s2 card-icon">
+                                    <i class="fa fa-th-large" aria-hidden="true" />
+                                </div>
+                                <div class="col s8 card-text center-align">
+                                    <p>TODAS OCORRÊNCIAS</p>
+                                </div>
+                                <div class="col s2 card-action">
+                                    <div class="box center-align">
+                                        <span>#{occurrenceBean.findAll().size()}</span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -50,20 +52,24 @@
             </div>
             <div class="row">
                 <ui:repeat value="#{categoryBean.findAll()}" var="category">
-                    <div class="event-card green darken-1 col s5 offset-s1 padding">
-                        <div class="container card-body">
-                            <div class="row">
-                                <div class="col s6 card-text center">
-                                    <p>#{category.name}</p>
-                                </div>
-                                <div class="col offset-s4 s2 card-action">
-                                    <div class="box center-align">
-                                        <span>0</span>
+                    
+                    <div class="col s12 m6">
+                        <div class="event-card green darken-1">
+                            <div class="container card-body">
+                                <div class="row">
+                                    <div class="col s6 card-text center">
+                                        <p>#{category.name}</p>
+                                    </div>
+                                    <div class="col push-s4 s2 card-action">
+                                        <div class="box center-align">
+                                            <span>#{category.occurrences.size()}</span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    
                 </ui:repeat>
             </div>
         </article>
