--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,6 +5,7 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:jsf="http://xmlns.jcp.org/jsf"
                 xmlns:p="http://primefaces.org/ui"
+                xmlns:pretty="http://ocpsoft.com/prettyfaces">
 >
 
     <ui:define name="content">
@@ -12,7 +13,9 @@
             <img id="image-header" src="resources/images/gp.jpg" />
 
             <div id="box-action">
-                <h:button value="Acessar o Sistema" outcome="#{loginBean.redireciona()}" />
+                <pretty:link mappingId="sign-in" class="waves-effect waves-light btn blue darken-3">
+                    <f:view>PUBLICAR UMA OCORRENCIA</f:view>
+                </pretty:link>
             </div>
 
             <div id="box-text-header" class="center-align">
