--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -11,9 +11,17 @@
             <img id="image-header" src="resources/images/gp.jpg" />
 
             <div id="box-action">
+                <h:panelGroup rendered="#{not empty sessionUserBean.currentUser}">
+                <pretty:link mappingId="occurrence-record" class="waves-effect waves-light btn blue darken-3">
+                    <f:view>PUBLICAR UMA OCORRENCIA</f:view>
+                </pretty:link>
+                </h:panelGroup>
+                
+                <h:panelGroup rendered="#{empty sessionUserBean.currentUser}">
                 <pretty:link mappingId="sign-in" class="waves-effect waves-light btn blue darken-3">
                     <f:view>PUBLICAR UMA OCORRENCIA</f:view>
                 </pretty:link>
+                </h:panelGroup>
             </div>
 
             <div id="box-text-header" class="center-align">
